...
            android:title="@string/Agents" />
        <item
            android:id="@+id/providerList"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/provider" />
        <item
            android:id="@+id/clientList"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/client" />

        <item
            android:id="@+id/codeList"
            android:icon="@drawable/ic_menu_manage"
...
