<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/edit_txt" android:id="@+id/editFacility"/>
    <item android:title="@string/delete_txt" android:id="@+id/deleteFacility"/>
</menu>